Fix OTO-card not stretching bug
- Change align-self to stretch

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -145,7 +145,7 @@ section {
 }
 
 #oto-card {
-  align-self: center;
+  align-self: stretch;
   background-color: $red;
   flex: 1 100%;
   order: 1;
